@@ -2,6 +2,11 @@ MMI Ont2Dot ChangeLog
 
 2010-06-21
 	- jenaInfo._prepareInfoAboutOntology: Use getLexicalForm when getting the version.
+	- DotGeneratorJenaImpl._getDataTypePropsLabelSuffixForClass: some ad hoc prefixing, 
+	  eg., if range is http://www.w3.org/2000/01/rdf-schema#Datatype, then the label
+	  for the range is written as rdfs:Datatype.
+	  TODO: show associated values in instantiations also embedded in the shape box for
+	  instances. 
 	
 2010-05-23
 	- include a "generated by" box with name and version of input ontology.
